<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_song"
        android:icon="@drawable/ic_song"
        android:title="@string/SunSeeker"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_recepie"
        android:icon="@drawable/ic_rec"
        android:title="@string/SunSeeker"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_dictionary"
        android:icon="@drawable/ic_dict"
        android:title="@string/SunSeeker"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sunSeeker"
        android:icon="@drawable/ic_sun_home"
        android:title="@string/SunSeeker"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_return"
        android:title="@string/return_main"
        app:showAsAction="never"/>
</menu>
